Appcontext, film évvel kiegészítés

--- a/src/main/resources/com/example/sorozatok/movie-form.fxml
+++ b/src/main/resources/com/example/sorozatok/movie-form.fxml
@@ -16,6 +16,9 @@
             <Label text="Év:"/>
             <TextField fx:id="yearField" prefWidth="300"/>
 
+            <Label text="Értékelés:"/>
+            <TextField fx:id="ratingField" prefWidth="300"/>
+
             <Label text="Műfaj:"/>
             <ComboBox fx:id="genreComboBox" prefWidth="300"/>
 
