--- a/src/main/resources/com/example/sorozatok/movie-form.fxml
+++ b/src/main/resources/com/example/sorozatok/movie-form.fxml
@@ -22,6 +22,9 @@
             <Label text="Műfaj:"/>
             <ComboBox fx:id="genreComboBox" prefWidth="300"/>
 
+            <Label text="Státusz:"/>
+            <ComboBox fx:id="statusComboBox" prefWidth="300"/>
+
             <HBox spacing="10">
                 <children>
                     <Button text="Mentés" onAction="#onSave"/>
